Added Microsoft.Azure.Cosmos nuget @3.27.2

--- a/excercise_api_v2/excercise_api_v2.csproj
+++ b/excercise_api_v2/excercise_api_v2.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.5" />
     <PackageReference Include="Microsoft.Identity.Web" Version="1.16.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.27.2" />
   </ItemGroup>
 
 </Project>
