Moved database name and container name to appsettings

--- a/excercise_api_v2/appsettings.json
+++ b/excercise_api_v2/appsettings.json
@@ -13,5 +13,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CosmosDB": {
+    "Database": "myTestDatabase",
+    "Container": "myTestContainer"
+  }
 }
